<resources>
    <string name="app_name">Ganit Calculator</string>
    <string name="seven">7</string>
    <string name="Eight">8</string>
    <string name="divide">/</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="multiply">x</string>
    <string name="two">2</string>
    <string name="minus">-</string>
    <string name="add">+</string>
    <string name="three">3</string>
    <string name="equals">=</string>
    <string name="four">4</string>
    <string name="clear">CLR</string>
    <string name="zero">0</string>
    <string name="nine">9</string>
    <string name="delete">DEL</string>
    <string name="dot">.</string>
</resources>