<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/bg1Blue"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/preTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text=""
            android:textColor="@color/preTextWhite"
            android:gravity="bottom|right"
            android:textSize="30sp"
            android:background="@color/bg2Blue"
            tools:ignore="RtlHardcoded,RtlSymmetry"
            android:paddingBottom="7dp"
            android:paddingRight="7dp">
        </TextView>

        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:background="@color/bg2Blue"
            android:text=""
            android:gravity="end"
            android:textColor="@color/white"
            android:paddingBottom="3dp"
            android:paddingEnd="10dp"
            tools:ignore="RtlSymmetry">
        </TextView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/seven"
            android:textSize="20sp"
            android:layout_margin="5dp"
            tools:ignore="ButtonStyle,NestedWeights">
        </Button>

        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/Eight"
            android:textSize="20sp"
            android:layout_margin="5dp"
            tools:ignore="ButtonStyle">
        </Button>

        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/nine"
            android:textSize="20sp"
            android:layout_margin="5dp"
            tools:ignore="ButtonStyle">
        </Button>

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/divide"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textColor="@color/someTextBlack"
            tools:ignore="ButtonStyle">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/four"
            android:textSize="20sp"
            android:layout_margin="5dp"
            tools:ignore="ButtonStyle,NestedWeights">
        </Button>

        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/five"
            android:textSize="20sp"
            android:layout_margin="5dp"
            tools:ignore="ButtonStyle">
        </Button>

        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/six"
            android:textSize="20sp"
            android:layout_margin="5dp"
            tools:ignore="ButtonStyle">
        </Button>

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/multiply"
            android:textSize="20sp"
            android:layout_margin="5dp"
            android:textColor="@color/someTextBlack"
            tools:ignore="ButtonStyle">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/one"
            android:textSize="20sp"
            android:layout_margin="5dp"
            tools:ignore="ButtonStyle,NestedWeights">
        </Button>

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/two"
            android:textSize="20sp"
            android:layout_margin="5dp"
            tools:ignore="ButtonStyle">
        </Button>

        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/three"
            android:textSize="20sp"
            android:layout_margin="5dp"
            tools:ignore="ButtonStyle">
        </Button>

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/minus"
            android:textColor="@color/someTextBlack"
            android:textStyle="bold"
            android:textSize="20sp"
            tools:ignore="ButtonStyle,TextContrastCheck">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/dot"
            android:textColor="@color/someTextBlack"
            android:textStyle="bold"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,NestedWeights">
        </Button>

        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/zero"
            android:textSize="20sp"
            tools:ignore="ButtonStyle,NestedWeights">
        </Button>

        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/clear"
            android:textSize="15sp"
            android:layout_margin="5dp"
            android:textColor="@color/someTextBlack"
            android:textStyle="bold"
            tools:ignore="ButtonStyle">
        </Button>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/add"
            android:textSize="20sp"
            android:layout_margin="5dp"
            android:textColor="@color/someTextBlack"
            tools:ignore="ButtonStyle">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            tools:ignore="ButtonStyle,NestedWeights"
            android:text="@string/delete"
            android:textSize="15sp"
            android:textColor="@color/someTextBlack">
        </Button>

        <Button
            android:id="@+id/btnEquals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/equals"
            android:textColor="#7986CB"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle,NestedWeights,TextContrastCheck">
        </Button>

    </LinearLayout>

</LinearLayout>
